@@ -1,3 +1,8 @@
+2003-11-06  Zoltan Varga  <zovarga@ws-zovarga2>
+
+	* mono/benchmark/pinvoke.cs: New benchmark for testing the performance
+	of the managed/unmanaged boundary.
+
 2003-11-06  Zoltan Varga  <vargaz@freemail.hu>
 
 	* configure.in acconfig.h: Add check for __thread keyword in gcc.
